Fixed overflow Safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,32 +8,40 @@
 
 html {
     background-color: theme('colors.beige');
-    overflow-x: hidden;
+
+
 }
 
 body {
     @apply font-jost;
     color: theme('colors.dark');
 
+
 }
+
+
 
 header {
     color: theme('colors.light-grey');
     z-index: 1000;
 }
 
-.visually-hidden { 
+.visually-hidden {
     border: 0;
     padding: 0;
     margin: 0;
     position: absolute !important;
-    height: 1px; 
+    height: 1px;
     width: 1px;
     overflow: hidden;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-    clip: rect(1px, 1px, 1px, 1px); /*maybe deprecated but we need to support legacy browsers */
-    clip-path: inset(50%); /*modern browsers, clip-path works inwards from each corner*/
-    white-space: nowrap; /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
+    clip: rect(1px 1px 1px 1px);
+    /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
+    clip: rect(1px, 1px, 1px, 1px);
+    /*maybe deprecated but we need to support legacy browsers */
+    clip-path: inset(50%);
+    /*modern browsers, clip-path works inwards from each corner*/
+    white-space: nowrap;
+    /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 }
 
 /* LOGO ANIM */
@@ -209,3 +217,9 @@ header {
 .selected-card:hover h2 {
     color: theme('colors.blue');
 }
+
+
+  
+  
+  
+  
